# Mirage

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini  vcpkg.json
plan/: cpp_video_player_plan.md
src/: AudioDecoder.cpp  AudioDecoder.h  AudioPlayer.cpp  AudioPlayer.h  Clock.h  DebugHUD.cpp  DebugHUD.h  Decoder.cpp  Decoder.h  Demuxer.cpp  Demuxer.h  Logger.h  ManifestParser.cpp  ManifestParser.h  NetworkLogger.cpp  NetworkLogger.h  PlayerUI.cpp  PlayerUI.h  Queue.h  ScrubBar.cpp  ScrubBar.h  ScrubDecoder.cpp  ScrubDecoder.h  SubtitleDecoder.cpp  SubtitleDecoder.h  Sync.cpp  Sync.h  ThumbnailStrip.cpp  ThumbnailStrip.h  VMAFAnalyzer.cpp  VMAFAnalyzer.h  VideoRenderer.cpp  VideoRenderer.h  main.cpp
tests/: test_manifest_parser.cpp  test_network_logger.cpp  test_subtitle_decoder.cpp
